# High-Performance-Computing

./: README.md
FinalProject/: CSRScalar.cu  CompileInstructions.txt  Makefile  NonLinearElasticity.cu  NonLinearElasticity.cuh  Project.sh  main.cu  project.err
FinalProject/eigen-3.4.0/Eigen/: Dense
HW01/: task4.sh
HW02/: convolution.cpp  convolution.h  matmul.cpp  scan.cpp  task1.sh  task2.sh  task3.cpp  task3.sh  timings.txt
HW03/: task1.cu  task1.sh  task1CompileRun.sh  task2.sh  task2CudaSlurm.sh  task3CompileRun.sh
HW04/: task1CompileRun.sh  task2.cu
HW05/: task2.cu
HW06/: mmul.cu  scan.cu
HW07/: count.cu  task1_cub.cu  task1_thrust.cu
HW08/: convolution.cpp  matmul.cpp  msort.cpp  task1.cpp  task1.sh  task2.sh  task3.cpp
HW10/: reduce.cpp  task1.cpp  task2_pure_omp.cpp
High Performance Computing/Non_Linear_Elasticity/FinalProject/: CMakeCache.txt  cmake_install.cmake  makepair  test.cu
High Performance Computing/Projects/HW01/: task6.cpp  task6.sh
High Performance Computing/Projects/HW02/: FirstSlurm.err  matmul.h  scaling.py  scan.h  task1  task1.cpp  task1_output.txt  task1_times.txt  task2.cpp
High Performance Computing/Projects/HW03/: task1CudaSlurm.sh  task2.cu  task2CompileRun.sh  task3.cu  vscale.cu
High Performance Computing/Projects/HW04/: matmul.cu  stencil.cu  task1.cu  task1CudaSlurm.sh  task2CudaSlurm.sh
TempProject/FinalProject/: CMakeLists.txt  NlElas  NonLinearElasticity.cu  Verifications.txt  main.cu  project
TempProject/FinalProject/testHelloWorld.dSYM/Contents/Resources/DWARF/: testHelloWorld
(+13 files in other folders)
